Enable features API for content shell and webview

When I run the following:

build/android/adb_content_shell_command_line --enable-features=ImeThread

Then call to base::FeatureList::IsEnabled(features::kImeThread)
always returns false.

This happens because we are not initializing feature list for content shell.

With this CL, BrowserMainLoop::PreCreateThreads() now initializes
features from
commandline.

BUG=596021

Review URL: https://codereview.chromium.org/1812883003

Cr-Commit-Position: refs/heads/master@{#384212}

Former-commit-id: 5b9da199ca3d2cc6e4bc25861df705f6e3151c04